<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/map" android:id="@+id/mapFragment" android:icon="@drawable/ic_map" app:iconTint="@color/colorPrimary" app:iconTintMode="src_in"/>
    <item android:title="@string/favourites" android:id="@+id/favouriteFragment" android:icon="@drawable/ic_favourite" app:iconTint="@color/colorPrimary" app:iconTintMode="src_in"/>
    <item android:title="@string/notifications" android:id="@+id/notificationFragment" android:icon="@drawable/ic_notifications" app:iconTint="@color/colorPrimary" app:iconTintMode="src_in"/>

</menu>